Attempt to port RAW_REQUEST to FastMegaHTTPClient